--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2134,18 +2134,6 @@ body {
 .cid-qTkAaeaxX5 P {
   color: #0075c9;
 }
-.cid-qYaWodqoBB {
-  background: #ffffff;
-}
-.cid-qYaWodqoBB .video-block {
-  margin: auto;
-  width: 100% !important;
-}
-@media (max-width: 768px) {
-  .cid-qYaWodqoBB .video-block {
-    width: 100% !important;
-  }
-}
 .cid-r65CkanrKj {
   background-color: #0075c9;
 }
@@ -2165,6 +2153,18 @@ body {
 }
 .cid-r65CkanrKj H1 {
   color: #ffffff;
+}
+.cid-qYaWodqoBB {
+  background: #ffffff;
+}
+.cid-qYaWodqoBB .video-block {
+  margin: auto;
+  width: 100% !important;
+}
+@media (max-width: 768px) {
+  .cid-qYaWodqoBB .video-block {
+    width: 100% !important;
+  }
 }
 .cid-qTkzRZLJNu .navbar {
   padding: .5rem 0;
@@ -2639,280 +2639,67 @@ body {
 .cid-r65FE3nRL1 .team-item .item-caption {
   background: #efefef;
 }
-.cid-r65NwdRWao {
-  padding-top: 45px;
-  padding-bottom: 45px;
+.cid-r65SQ1eBzM {
+  padding-top: 0px;
+  padding-bottom: 0px;
   background-color: #ffffff;
 }
-.cid-r65NwdRWao .content-slider {
-  display: flex;
-  justify-content: center;
-}
-.cid-r65NwdRWao .modal-body .close {
+.cid-r65SQ1eBzM .mbr-slider .carousel-control {
   background: #1b1b1b;
 }
-.cid-r65NwdRWao .modal-body .close span {
-  font-style: normal;
-}
-.cid-r65NwdRWao .carousel-inner > .active,
-.cid-r65NwdRWao .carousel-inner > .next,
-.cid-r65NwdRWao .carousel-inner > .prev {
-  display: flex;
-}
-.cid-r65NwdRWao .carousel-control .icon-next,
-.cid-r65NwdRWao .carousel-control .icon-prev {
-  margin-top: -18px;
-  font-size: 40px;
-  line-height: 27px;
-}
-.cid-r65NwdRWao .carousel-control:hover {
-  background: #1b1b1b;
-  color: #fff;
-  opacity: 1;
-}
-@media (max-width: 767px) {
-  .cid-r65NwdRWao .container .carousel-control {
-    margin-bottom: 0;
-  }
-  .cid-r65NwdRWao .content-slider-wrap {
-    width: 100%!important;
-  }
-}
-.cid-r65NwdRWao .boxed-slider {
-  position: relative;
-  padding: 93px 0;
-}
-.cid-r65NwdRWao .boxed-slider > div {
-  position: relative;
-}
-.cid-r65NwdRWao .container img {
-  width: 100%;
-}
-.cid-r65NwdRWao .container img + .row {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  right: 0;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  transform: translateY(-50%);
-  z-index: 2;
-}
-.cid-r65NwdRWao .mbr-section {
-  padding: 0;
-  background-attachment: scroll;
-}
-.cid-r65NwdRWao .mbr-table-cell {
-  padding: 0;
-}
-.cid-r65NwdRWao .container .carousel-indicators {
-  margin-bottom: 3px;
-}
-.cid-r65NwdRWao .carousel-caption {
-  top: 50%;
-  right: 0;
-  bottom: auto;
-  left: 0;
-  display: flex;
-  align-items: center;
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-}
-.cid-r65NwdRWao .mbr-overlay {
-  z-index: 1;
-}
-.cid-r65NwdRWao .container-slide.container {
-  width: 100%;
-  min-height: 100vh;
-  padding: 0;
-}
-.cid-r65NwdRWao .carousel-item {
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -o-transition: -o-transform 0.6s ease-in-out;
-  -webkit-transition: -webkit-transform 0.6s ease-in-out;
-  transition: transform 0.6s ease-in-out, -webkit-transform 0.6s ease-in-out, -o-transform 0.6s ease-in-out;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -webkit-perspective: 1000px;
-  perspective: 1000px;
-}
-@media (max-width: 576px) {
-  .cid-r65NwdRWao .carousel-item .container {
-    width: 100%;
-  }
-}
-.cid-r65NwdRWao .carousel-item-next.carousel-item-left,
-.cid-r65NwdRWao .carousel-item-prev.carousel-item-right {
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-}
-.cid-r65NwdRWao .active.carousel-item-right,
-.cid-r65NwdRWao .carousel-item-next {
-  -webkit-transform: translate3d(100%, 0, 0);
-  transform: translate3d(100%, 0, 0);
-}
-.cid-r65NwdRWao .active.carousel-item-left,
-.cid-r65NwdRWao .carousel-item-prev {
-  -webkit-transform: translate3d(-100%, 0, 0);
-  transform: translate3d(-100%, 0, 0);
-}
-.cid-r65NwdRWao .mbr-slider .carousel-control {
-  top: 50%;
-  width: 50px;
-  height: 50px;
-  margin-top: -1.5rem;
-  font-size: 35px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  transition: all .3s;
-}
-.cid-r65NwdRWao .mbr-slider .carousel-control.carousel-control-prev {
+.cid-r65SQ1eBzM .mbr-slider .carousel-control-prev {
   left: 0;
   margin-left: 2.5rem;
 }
-.cid-r65NwdRWao .mbr-slider .carousel-control.carousel-control-next {
+.cid-r65SQ1eBzM .mbr-slider .carousel-control-next {
   right: 0;
   margin-right: 2.5rem;
 }
-.cid-r65NwdRWao .mbr-slider .carousel-control .mbr-iconfont {
-  font-size: 1.5rem;
+.cid-r65SQ1eBzM .mbr-slider .modal-body .close {
+  background: #1b1b1b;
 }
-@media (max-width: 767px) {
-  .cid-r65NwdRWao .mbr-slider .carousel-control {
-    top: auto;
-    bottom: 1rem;
-  }
-}
-.cid-r65NwdRWao .mbr-slider .carousel-indicators {
+.cid-r65SQ1eBzM .mbr-gallery-item > div::before {
+  content: '';
   position: absolute;
-  bottom: 0;
-  margin-bottom: 1.5rem !important;
-}
-.cid-r65NwdRWao .mbr-slider .carousel-indicators li {
-  max-width: 15px;
-  height: 15px;
-  max-height: 15px;
-  margin: 3px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  opacity: .5;
-  transition: all .3s;
-}
-.cid-r65NwdRWao .mbr-slider .carousel-indicators li.active,
-.cid-r65NwdRWao .mbr-slider .carousel-indicators li:hover {
-  opacity: .9;
-}
-.cid-r65NwdRWao .mbr-slider .carousel-indicators li::after,
-.cid-r65NwdRWao .mbr-slider .carousel-indicators li::before {
-  content: none;
-}
-.cid-r65NwdRWao .mbr-slider .carousel-indicators.ie-fix {
-  left: 50%;
-  display: block;
-  width: 60%;
-  margin-left: -30%;
-  text-align: center;
-}
-@media (max-width: 576px) {
-  .cid-r65NwdRWao .mbr-slider .carousel-indicators {
-    display: none !important;
-  }
-}
-.cid-r65NwdRWao .mbr-slider > .container img {
-  width: 100%;
-}
-.cid-r65NwdRWao .mbr-slider > .container img + .row {
-  position: absolute;
-  top: 50%;
-  right: 0;
   left: 0;
-  z-index: 2;
-  -moz-transform: translateY(-50%);
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-}
-.cid-r65NwdRWao .mbr-slider > .container .carousel-indicators {
-  margin-bottom: 3px;
-}
-@media (max-width: 576px) {
-  .cid-r65NwdRWao .mbr-slider > .container .carousel-control {
-    margin-bottom: 0;
-  }
-}
-.cid-r65NwdRWao .mbr-slider .mbr-section {
-  padding: 0;
-  background-attachment: scroll;
-}
-.cid-r65NwdRWao .mbr-slider .mbr-table-cell {
-  padding: 0;
-}
-.cid-r65NwdRWao .carousel-item .container.container-slide {
-  position: initial;
-  width: auto;
-  min-height: 0;
-}
-.cid-r65NwdRWao .full-screen .slider-fullscreen-image {
-  min-height: 100vh;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-size: cover;
-}
-.cid-r65NwdRWao .full-screen .slider-fullscreen-image.active {
-  display: -o-flex;
-}
-.cid-r65NwdRWao .full-screen .container {
-  width: auto;
-  padding-right: 0;
-  padding-left: 0;
-}
-.cid-r65NwdRWao .full-screen .carousel-item .container.container-slide {
-  width: 100%;
-  min-height: 100vh;
-  padding: 0;
-}
-.cid-r65NwdRWao .full-screen .carousel-item .container.container-slide img {
-  display: none;
-}
-.cid-r65NwdRWao .mbr-background-video-preview {
-  position: absolute;
   top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
-.cid-r65NwdRWao .mbr-overlay ~ .container-slide {
-  z-index: auto;
-}
-.cid-r65NwdRWao .mbr-slider.slide .container {
-  overflow: hidden;
-  padding: 0;
-}
-.cid-r65NwdRWao .carousel-inner {
+  width: 100%;
   height: 100%;
+  background: #554346;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
 }
-.cid-r65NwdRWao .slider-fullscreen-image {
-  height: 100%;
+.cid-r65SQ1eBzM .mbr-gallery-item > div:hover .mbr-gallery-title::before {
   background: transparent !important;
 }
-.cid-r65NwdRWao .image_wrapper {
-  height: 400px;
+.cid-r65SQ1eBzM .mbr-gallery-item > div:hover:before {
+  opacity: 0.7 !important;
+}
+.cid-r65SQ1eBzM .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
   width: 100%;
-  position: relative;
-  display: inline-block;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
 }
-.cid-r65NwdRWao .image_wrapper img {
-  width: auto !important;
+.cid-r65SQ1eBzM .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
   height: 100%;
-}
-.cid-r65NwdRWao .carousel-item .container-slide {
-  text-align: center;
-}
-.cid-r65NwdRWao .content-slider-wrap {
-  width: 60%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #554346 !important;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+  opacity: 0.7;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
 }
 .cid-qYb3acD3QD {
   padding-top: 90px;
@@ -2950,6 +2737,29 @@ body {
 }
 .cid-qYb3acD3QD .team-item .item-caption {
   background: #efefef;
+}
+.cid-r661NhENSf {
+  background: #ffffff;
+}
+.cid-r661NhENSf .image-block {
+  margin: auto;
+  width: 100% !important;
+}
+.cid-r661NhENSf .mbr-figure {
+  margin: 0 auto;
+}
+.cid-r661NhENSf figcaption {
+  position: relative;
+}
+.cid-r661NhENSf figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-r661NhENSf .image-block {
+    width: 100% !important;
+  }
 }
 .cid-qYb3t1RpQV {
   padding-top: 90px;
@@ -3193,43 +3003,271 @@ body {
     display: block;
   }
 }
-.cid-r65D8urcyE {
+.cid-r662F5T4iw {
+  background: #ffffff;
+}
+.cid-r662F5T4iw .image-block {
+  margin: auto;
+  width: 100% !important;
+}
+.cid-r662F5T4iw .mbr-figure {
+  margin: 0 auto;
+}
+.cid-r662F5T4iw figcaption {
+  position: relative;
+}
+.cid-r662F5T4iw figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-r662F5T4iw .image-block {
+    width: 100% !important;
+  }
+}
+.cid-r660UGkoBc {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+  background: linear-gradient(#ffffff, #ffffff);
+}
+.cid-r660UGkoBc .carousel-control {
+  background: #000;
+}
+.cid-r660UGkoBc .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-r660UGkoBc .carousel-item {
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-r660UGkoBc .carousel-item .media-container-row {
+  -webkit-flex-grow: 1;
+  flex-grow: 1;
+}
+.cid-r660UGkoBc .carousel-item .wrap-img {
+  text-align: center;
+}
+.cid-r660UGkoBc .carousel-item .wrap-img img {
+  max-height: 150px;
+  width: auto;
+  max-width: 100%;
+}
+.cid-r660UGkoBc .carousel-controls {
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-r660UGkoBc .carousel-controls .carousel-control {
+  background: #000;
+  border-radius: 50%;
+  position: static;
+  width: 40px;
+  height: 40px;
+  margin-top: 2rem;
+  border-width: 1px;
+}
+.cid-r660UGkoBc .carousel-controls .carousel-control.carousel-control-prev {
+  left: auto;
+  margin-right: 20px;
+  margin-left: 0;
+}
+.cid-r660UGkoBc .carousel-controls .carousel-control.carousel-control-next {
+  right: auto;
+  margin-right: 0;
+}
+.cid-r660UGkoBc .carousel-controls .carousel-control .mbr-iconfont {
+  font-size: 1rem;
+}
+.cid-r660UGkoBc .cloneditem-1,
+.cid-r660UGkoBc .cloneditem-2,
+.cid-r660UGkoBc .cloneditem-3,
+.cid-r660UGkoBc .cloneditem-4,
+.cid-r660UGkoBc .cloneditem-5 {
+  display: none;
+}
+.cid-r660UGkoBc .col-lg-15 {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 100%;
+  -webkit-flex: 0 0 100%;
+  flex: 0 0 100%;
+  max-width: 100%;
+  position: relative;
+  min-height: 1px;
+  padding-right: 10px;
+  padding-left: 10px;
+  width: 100%;
+}
+@media (min-width: 992px) {
+  .cid-r660UGkoBc .col-lg-15 {
+    -ms-flex: 0 0 20%;
+    -webkit-flex: 0 0 20%;
+    flex: 0 0 20%;
+    max-width: 20%;
+    width: 20%;
+  }
+  .cid-r660UGkoBc .carousel-inner.slides2 > .carousel-item.active.carousel-item-right,
+  .cid-r660UGkoBc .carousel-inner.slides2 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(50%, 0, 0);
+    transform: translate3d(50%, 0, 0);
+  }
+  .cid-r660UGkoBc .carousel-inner.slides2 > .carousel-item.active.carousel-item-left,
+  .cid-r660UGkoBc .carousel-inner.slides2 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-50%, 0, 0);
+    transform: translate3d(-50%, 0, 0);
+  }
+  .cid-r660UGkoBc .carousel-inner.slides2 > .carousel-item.carousel-item-left,
+  .cid-r660UGkoBc .carousel-inner.slides2 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-r660UGkoBc .carousel-inner.slides2 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-r660UGkoBc .carousel-inner.slides2 .cloneditem-1,
+  .cid-r660UGkoBc .carousel-inner.slides2 .cloneditem-2,
+  .cid-r660UGkoBc .carousel-inner.slides2 .cloneditem-3 {
+    display: block;
+  }
+  .cid-r660UGkoBc .carousel-inner.slides3 > .carousel-item.active.carousel-item-right,
+  .cid-r660UGkoBc .carousel-inner.slides3 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(33.333333%, 0, 0);
+    transform: translate3d(33.333333%, 0, 0);
+  }
+  .cid-r660UGkoBc .carousel-inner.slides3 > .carousel-item.active.carousel-item-left,
+  .cid-r660UGkoBc .carousel-inner.slides3 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-33.333333%, 0, 0);
+    transform: translate3d(-33.333333%, 0, 0);
+  }
+  .cid-r660UGkoBc .carousel-inner.slides3 > .carousel-item.carousel-item-left,
+  .cid-r660UGkoBc .carousel-inner.slides3 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-r660UGkoBc .carousel-inner.slides3 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-r660UGkoBc .carousel-inner.slides3 .cloneditem-1,
+  .cid-r660UGkoBc .carousel-inner.slides3 .cloneditem-2,
+  .cid-r660UGkoBc .carousel-inner.slides3 .cloneditem-3 {
+    display: block;
+  }
+  .cid-r660UGkoBc .carousel-inner.slides4 > .carousel-item.active.carousel-item-right,
+  .cid-r660UGkoBc .carousel-inner.slides4 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(25%, 0, 0);
+    transform: translate3d(25%, 0, 0);
+  }
+  .cid-r660UGkoBc .carousel-inner.slides4 > .carousel-item.active.carousel-item-left,
+  .cid-r660UGkoBc .carousel-inner.slides4 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-25%, 0, 0);
+    transform: translate3d(-25%, 0, 0);
+  }
+  .cid-r660UGkoBc .carousel-inner.slides4 > .carousel-item.carousel-item-left,
+  .cid-r660UGkoBc .carousel-inner.slides4 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-r660UGkoBc .carousel-inner.slides4 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-r660UGkoBc .carousel-inner.slides4 .cloneditem-1,
+  .cid-r660UGkoBc .carousel-inner.slides4 .cloneditem-2,
+  .cid-r660UGkoBc .carousel-inner.slides4 .cloneditem-3 {
+    display: block;
+  }
+  .cid-r660UGkoBc .carousel-inner.slides5 > .carousel-item.active.carousel-item-right,
+  .cid-r660UGkoBc .carousel-inner.slides5 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(20%, 0, 0);
+    transform: translate3d(20%, 0, 0);
+  }
+  .cid-r660UGkoBc .carousel-inner.slides5 > .carousel-item.active.carousel-item-left,
+  .cid-r660UGkoBc .carousel-inner.slides5 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-20%, 0, 0);
+    transform: translate3d(-20%, 0, 0);
+  }
+  .cid-r660UGkoBc .carousel-inner.slides5 > .carousel-item.carousel-item-left,
+  .cid-r660UGkoBc .carousel-inner.slides5 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-r660UGkoBc .carousel-inner.slides5 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-r660UGkoBc .carousel-inner.slides5 .cloneditem-1,
+  .cid-r660UGkoBc .carousel-inner.slides5 .cloneditem-2,
+  .cid-r660UGkoBc .carousel-inner.slides5 .cloneditem-3,
+  .cid-r660UGkoBc .carousel-inner.slides5 .cloneditem-4 {
+    display: block;
+  }
+  .cid-r660UGkoBc .carousel-inner.slides6 > .carousel-item.active.carousel-item-right,
+  .cid-r660UGkoBc .carousel-inner.slides6 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(16.666667%, 0, 0);
+    transform: translate3d(16.666667%, 0, 0);
+  }
+  .cid-r660UGkoBc .carousel-inner.slides6 > .carousel-item.active.carousel-item-left,
+  .cid-r660UGkoBc .carousel-inner.slides6 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-16.666667%, 0, 0);
+    transform: translate3d(-16.666667%, 0, 0);
+  }
+  .cid-r660UGkoBc .carousel-inner.slides6 > .carousel-item.carousel-item-left,
+  .cid-r660UGkoBc .carousel-inner.slides6 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-r660UGkoBc .carousel-inner.slides6 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-r660UGkoBc .carousel-inner.slides6 .cloneditem-1,
+  .cid-r660UGkoBc .carousel-inner.slides6 .cloneditem-2,
+  .cid-r660UGkoBc .carousel-inner.slides6 .cloneditem-3,
+  .cid-r660UGkoBc .carousel-inner.slides6 .cloneditem-4,
+  .cid-r660UGkoBc .carousel-inner.slides6 .cloneditem-5 {
+    display: block;
+  }
+}
+.cid-r65RpoNVmp {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: #2e2e2e;
+  background-color: #ffffff;
 }
 @media (max-width: 767px) {
-  .cid-r65D8urcyE .content {
+  .cid-r65RpoNVmp .content {
     text-align: center;
   }
-  .cid-r65D8urcyE .content > div:not(:last-child) {
+  .cid-r65RpoNVmp .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-r65D8urcyE .media-wrap {
+  .cid-r65RpoNVmp .media-wrap {
     margin-bottom: 1rem;
   }
 }
-.cid-r65D8urcyE .media-wrap .mbr-iconfont-logo {
+.cid-r65RpoNVmp .media-wrap .mbr-iconfont-logo {
   font-size: 7.5rem;
   color: #f36;
 }
-.cid-r65D8urcyE .media-wrap img {
+.cid-r65RpoNVmp .media-wrap img {
   height: 6rem;
 }
 @media (max-width: 767px) {
-  .cid-r65D8urcyE .footer-lower .copyright {
+  .cid-r65RpoNVmp .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-r65D8urcyE .footer-lower hr {
+.cid-r65RpoNVmp .footer-lower hr {
   margin: 1rem 0;
   border-color: #fff;
   opacity: .05;
 }
-.cid-r65D8urcyE .footer-lower .social-list {
+.cid-r65RpoNVmp .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -3238,27 +3276,30 @@ body {
   justify-content: flex-end;
   -webkit-justify-content: flex-end;
 }
-.cid-r65D8urcyE .footer-lower .social-list .mbr-iconfont-social {
+.cid-r65RpoNVmp .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #fff;
 }
-.cid-r65D8urcyE .footer-lower .social-list .soc-item {
+.cid-r65RpoNVmp .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-r65D8urcyE .footer-lower .social-list a {
+.cid-r65RpoNVmp .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-r65D8urcyE .footer-lower .social-list a:hover {
+.cid-r65RpoNVmp .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-r65D8urcyE .footer-lower .social-list {
+  .cid-r65RpoNVmp .footer-lower .social-list {
     justify-content: center;
     -webkit-justify-content: center;
   }
+}
+.cid-r65RpoNVmp P {
+  color: #0075c9;
 }
 .cid-qTkzRZLJNu .navbar {
   padding: .5rem 0;
